CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(unixpong)

# add sources
ADD_SUBDIRECTORY(src)

# includes
INCLUDE_DIRECTORIES(include)

# apple fixes
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	INCLUDE_DIRECTORIES(/Library/Frameworks/SDL.framework/Headers)
	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	FIND_LIBRARY(SDL_LIBRARY SDL)
	FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

# linux fixes
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	#INCLUDE_DIRECTORIES(/Library/Frameworks/SDL.framework/Headers)
	#FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	FIND_LIBRARY(SDL_LIBRARY SDL)
	FIND_LIBRARY(OPENGL_LIBRARY GL)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

# CFLAGS
ADD_DEFINITIONS(-DDEBUG -O0 -Wall -g3)

# add sources
INCLUDE(${unixpong_SOURCE_DIR}/src/SourceFiles.txt)

# build executables
ADD_EXECUTABLE(unixpong ${unixpong_SRC} ${unixpong_MAIN})

# link libs
TARGET_LINK_LIBRARIES(
	unixpong
	${COCOA_LIBRARY}
	${SDL_LIBRARY}
	${OPENGL_LIBRARY}
)
